--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@hookform/resolvers": "^5.0.1",
+    "@mdxeditor/editor": "^3.32.3",
     "@mui/icons-material": "^7.1.0",
     "@mui/material": "^7.0.2",
     "@reduxjs/toolkit": "^2.8.1",
